# serial-tether

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  dist-workspace.toml  package-lock.json  package.json
.github/workflows/: docs.yml  publish-crates.yml  release.yml
crates/serial-tether/: Cargo.toml
crates/serial-tether/tests/: integration.rs  lock.rs
crates/tether/: Cargo.toml
crates/tether-protocol/: Cargo.toml
crates/tether-protocol/src/: codec.rs  error.rs  lib.rs  message.rs
crates/tether/src/: main.rs
crates/tetherd/: Cargo.toml
crates/tetherd/src/: conn.rs  serial.rs
docs/: AGENT_USAGE.md  AI_AGENT_GUIDE.md  CLI_REFERENCE.md  COOKBOOK.md  EXEC_NONPOSIX_SHELLS.md  GETTING_STARTED.md  OVERVIEW.md  PROTOCOL.md  README.md  TROUBLESHOOTING.md  cli_demo.cast  demo.cast  dual_shell_demo.cast  index.html  index.md  split_demo.cast
docs/.vitepress/: config.mts
docs/.vitepress/theme/: AsciinemaPlayer.vue  custom.css  index.ts
docs/public/: cli_demo.cast  multi_device_demo.cast  split_demo.cast
examples/: README.md  detect-shell.sh  parse-help.sh  set-env-and-verify.sh  uboot-bootinfo.sh  wait-for-boot.sh
tools/: _demo_lib.py  echo_pty.py  gen_cli_demo_cast.py  gen_demo_cast.py  gen_dual_shell_demo_cast.py  gen_multi_device_demo_cast.py  gen_split_demo_cast.py  smoke_test.sh
