[workspace]
resolver = "2"
members = [
    "crates/tether-protocol",
    "crates/serial-tether",
]

[workspace.package]
version = "0.6.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hulryung/serial-tether"
homepage = "https://github.com/hulryung/serial-tether"

[workspace.dependencies]
# Path lets local builds use the in-tree crate; version makes the dependency
# work for downstream crates.io consumers (and for `cargo publish`).
tether-protocol = { path = "crates/tether-protocol", version = "0.6.0" }

tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-serial = "5.4"
futures = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "v7"] }
regex = "1"

clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

bytes = "1"
parking_lot = "0.12"
if-addrs = "0.13"
crossterm = "0.28"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
