[package]
name = "serial-tether"
description = "Daemon and CLI that lets AI agents and humans share a single serial device. Ships `tetherd` (daemon) and `tether` (non-interactive client) with JSON-RPC over NDJSON, UDS and TCP transports, and agent-friendly defaults."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["serial", "uart", "embedded", "agent", "automation"]
categories = ["command-line-utilities", "embedded", "development-tools"]

[[bin]]
name = "tether"
path = "src/bin/tether.rs"

[[bin]]
name = "tetherd"
path = "src/bin/tetherd/main.rs"

[dependencies]
tether-protocol = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-serial = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
