[package]
name = "tether-protocol"
description = "Wire-protocol types and NDJSON codec for Serial Tether (shared by the tetherd daemon and tether client)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["serial", "embedded", "json-rpc", "protocol", "agent"]
categories = ["embedded", "network-programming", "encoding"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
